@@ -27,6 +27,8 @@
 	(MockClientBot): Created class.
 	(MockClientBot.getName): Created function.
 	(PokerTableTestCase.createBot): Wrote function.
+	(PokerTableTestCase.test99_destroy_table): Added test for updating
+	a destroyed table.
 
 2008-01-26  Bradley M. Kuhn  <bkuhn@ebb.org>
 
